Fix assembler header overlapping zoom buttons

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -57,7 +57,9 @@
 /* Pedalboard Info - Header */
 #pedalboard-info {
     height:100%;
+    position: absolute;
     left:45px;
+    right: 90px;
     margin:0;
     padding:0;
     display: inline-block;
